@@ -4,6 +4,89 @@ FIRETRAY_ID="{9533f794-00b4-4354-aa15-c2bbda6989f8}"
 
 #VERSION=`cat install.rdf | grep em:version | sed '*<em:version'`
 
+prepare_options_header_file()
+{
+  echo "******************************"
+  echo " TRAY COMPONENT BUILD OPTIONS"
+  echo "******************************"
+
+  DEST="components/options.h"
+  echo "// OPTIONS.H - dinamically generated by build script " > $DEST
+  echo "#ifndef _OPTIONS_H_" >> $DEST
+  echo "#define _OPTIONS_H_" >> $DEST
+  echo ""  >> $DEST
+
+  if [ -z "$NO_ERROR_MESSAGES" ] 
+  then
+   echo "ERROR MESSAGES: on"
+   echo "#define ENABLE_ERROR_MSG 1       //enable error messages"  >> $DEST
+  else
+   echo "ERROR MESSAGES: off"
+  fi
+
+  if [ -n "$ENABLE_DEBUG" ] 
+  then
+   echo "DEBUG MESSAGES: on"
+   echo "#define DO_DEBUG 1             //enable generic debug messages"  >> $DEST
+  else
+   echo "DEBUG MESSAGES: off"
+
+  fi
+
+  if [ -n "$ENABLE_DEBUG_FILTERS" ] 
+  then
+    echo "DEBUG EVENT FILTERS: on"
+    echo "#define DO_DEBUG_FILTER 1      //enable window events filter debug messages"  >> $DEST
+  else
+    echo "DEBUG EVENT FILTERS: off"
+  fi 
+ 
+  if [ -n "$ENABLE_DEBUG_CALLS" ] 
+  then
+    echo "DEBUG FUNCTION CALLS: on"
+    echo "#define DO_DEBUG_CALLS 1       //enable function calls debug messages"  >> $DEST
+  else
+    echo "DEBUG FUNCTION CALLS: off"
+  fi
+ 
+  echo ""  >> $DEST
+
+  if [ -z "$DISABLE_RESTORE_POSITION" ] 
+  then
+    echo "REMEMBER WINDOWS POSITION: on"
+    echo "#define _REMEMBER_POSITION_"  >> $DEST
+  else
+    echo "REMEMBER WINDOWS POSITION: off"
+  fi
+
+  echo "#define _KEYSYMS_"  >> $DEST
+  echo ""  >> $DEST
+  echo "#endif"  >> $DEST
+}
+
+show_options()
+{
+  echo " "   
+  echo "options:"
+  echo " "   
+  echo "    --gecko-sdk=folder        Manually specify gecko-sdk path "
+  echo "    --output-dir=folder       Install extension files to the selected folder "
+  echo "    --dynamic-linking         Do not use static linking of libraries "
+  echo " "   
+  echo "    --no-restore-positions    Disable saving window postion"  
+  echo " "   
+  echo "    --no-error-messages       Disable error messages"
+  echo "    --enable-debug            Enable general debug messages"
+  echo "    --debug-filters           Enable event filters debugging"
+  echo "    --debug-calls             Enable function calls debugging"
+  echo "    --debug-all               Enable all debugging messages"
+  echo " "   
+  exit
+}
+#SEP="--------------------------------------------------"
+
+
+
 for param in "$@"
 do
     paramval=`echo $param | sed 's/[-a-zA-Z0-9]*=//'`
@@ -37,18 +120,40 @@ do
           export DYNAMIC_LINKING="dyn"
           ;;
 
-        -h|--help)
-        
-          echo "options:"
-          echo "    --gecko-sdk=folder        Manually specify gecko-sdk path "
-          echo "    --output-dir=folder       Install extension files to the selected folder "
-          echo "    --dynamic-linking         Do not use static linking of libraries "
+        --no-error-messages)
+          NO_ERROR_MESSAGES="on"
+          ;;
 
-          exit
+        --enable-debug)
+          ENABLE_DEBUG="on"
+          ;;
+
+        --debug-filters)
+          ENABLE_DEBUG_FILTERS="on"
+          ;;
+
+        --debug-calls)
+          ENABLE_DEBUG_CALLS="on"
+          ;;
+
+        --debug-all)
+          ENABLE_DEBUG="on"
+          ENABLE_DEBUG_FILTERS="on"
+          ENABLE_DEBUG_CALLS="on"
+          ;;
+
+        --no-restore-positions)
+          DISABLE_RESTORE_POSITION="on"
+          ;;
+
+        -h|--help)
+          show_options  
           ;;
 
         *)
+          echo
           echo Unknown option: $param
+          show_options 
           ;;
 
     esac
@@ -63,6 +168,12 @@ fi
 export LIB_ARCH=_`uname -m`
 
 FILE=firetray.xpi
+
+prepare_options_header_file
+
+echo
+echo $SEP
+echo
 
 rm $FILE
 scons $FILE
